--- a/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
@@ -618,7 +618,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eEC-Za-Vrv">
                                 <rect key="frame" x="0.0" y="88" width="414" height="814"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="sortCell" rowHeight="129" id="NyN-gt-jFM" customClass="sortByTableViewCell" customModule="Va_cay" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="sortCell" rowHeight="129" id="NyN-gt-jFM" customClass="sortByTableViewCell" customModule="Va_cay" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="24.5" width="414" height="129"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="NyN-gt-jFM" id="hfb-v0-2QF">
@@ -702,31 +702,40 @@
                                             <outlet property="upcomingButton" destination="2fs-CY-MF7" id="Hgl-6q-qvB"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="placeholderCell" rowHeight="145" id="BGI-js-CNQ" customClass="PlaceholderItineraryTableViewCell" customModule="Va_cay" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="153.5" width="414" height="145"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="placeholderCell" rowHeight="215" id="BGI-js-CNQ" customClass="PlaceholderItineraryTableViewCell" customModule="Va_cay" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="153.5" width="414" height="215"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BGI-js-CNQ" id="8iG-3E-uBR">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="145"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="215"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Click the plus button below to add an itinerary" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZXZ-ki-rGV">
-                                                    <rect key="frame" x="83" y="52" width="248" height="41"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your feed is empty. Click on the button below to create an itinerary." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZXZ-ki-rGV">
+                                                    <rect key="frame" x="83" y="-6" width="248" height="119.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="downarrow" translatesAutoresizingMaskIntoConstraints="NO" id="b10-rx-9Hp">
+                                                    <rect key="frame" x="87" y="137.5" width="240" height="600"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="600" id="jQv-P6-RwX"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstItem="ZXZ-ki-rGV" firstAttribute="centerX" secondItem="8iG-3E-uBR" secondAttribute="centerX" id="8u4-4S-Uxg"/>
+                                                <constraint firstItem="b10-rx-9Hp" firstAttribute="top" secondItem="ZXZ-ki-rGV" secondAttribute="bottom" constant="24" id="Fdf-aF-dWS"/>
                                                 <constraint firstItem="ZXZ-ki-rGV" firstAttribute="width" secondItem="8iG-3E-uBR" secondAttribute="width" multiplier="0.6" id="I95-I4-6bF"/>
-                                                <constraint firstItem="ZXZ-ki-rGV" firstAttribute="centerY" secondItem="8iG-3E-uBR" secondAttribute="centerY" id="TLv-cz-XWf"/>
+                                                <constraint firstItem="b10-rx-9Hp" firstAttribute="centerX" secondItem="8iG-3E-uBR" secondAttribute="centerX" id="LAc-5i-trO"/>
+                                                <constraint firstItem="ZXZ-ki-rGV" firstAttribute="centerY" secondItem="8iG-3E-uBR" secondAttribute="centerY" multiplier="0.5" id="TLv-cz-XWf"/>
+                                                <constraint firstItem="b10-rx-9Hp" firstAttribute="width" secondItem="8iG-3E-uBR" secondAttribute="width" multiplier="0.57971" id="ZvF-FE-N37"/>
+                                                <constraint firstItem="ZXZ-ki-rGV" firstAttribute="centerX" secondItem="8iG-3E-uBR" secondAttribute="centerX" id="o3l-Hl-dPD"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="itineraryCell" rowHeight="334" id="Hf2-aO-9K2" customClass="ItineraryTableViewCell" customModule="Va_cay" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="298.5" width="414" height="334"/>
+                                        <rect key="frame" x="0.0" y="368.5" width="414" height="334"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Hf2-aO-9K2" id="QPu-e8-g1F">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="334"/>
@@ -1608,7 +1617,7 @@
                                     <constraint firstItem="3Ib-d4-HVD" firstAttribute="width" secondItem="wMa-FQ-dwW" secondAttribute="width" id="xrq-Vh-TSX"/>
                                 </constraints>
                             </stackView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vacaylogo1" translatesAutoresizingMaskIntoConstraints="NO" id="L2e-zQ-EjO">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vacaylogo" translatesAutoresizingMaskIntoConstraints="NO" id="L2e-zQ-EjO">
                                 <rect key="frame" x="143" y="184" width="128" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="2dx-b0-kvy"/>
@@ -1987,6 +1996,7 @@
         <image name="calendar" width="512" height="512"/>
         <image name="camera" catalog="system" width="128" height="94"/>
         <image name="chevron.down" catalog="system" width="128" height="72"/>
+        <image name="downarrow" width="840" height="1060"/>
         <image name="gearshape" catalog="system" width="128" height="121"/>
         <image name="globe" width="512" height="512"/>
         <image name="google" width="512" height="512"/>
@@ -1995,7 +2005,7 @@
         <image name="location-pin" width="512" height="512"/>
         <image name="plus.app" catalog="system" width="128" height="114"/>
         <image name="square" catalog="system" width="128" height="114"/>
-        <image name="vacaylogo1" width="1024" height="1024"/>
+        <image name="vacaylogo" width="1024" height="1024"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
